feat: added google fonts Montserrat, lobster

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,12 +10,17 @@
     </div>
 
     <!-- Nav menu (Desktop) -->
-    <ul class="hidden md:flex items-center gap-10 text-sm font-medium">
-      <li><a href="#" class="hover:text-gray-700">Home</a></li>
-      <li><a href="#" class="hover:text-gray-700">Servicios</a></li>
-      <li><a href="#" class="hover:text-gray-700">Proyectos</a></li>
-      <li><a href="#" class="hover:text-gray-700">Nosotros</a></li>
-      <li><a href="#" class="hover:text-gray-700">Contacto</a></li>
+    <ul
+      class="hidden md:flex items-center gap-10 text-2xl font-medium font-lobster"
+    >
+      <li>
+        <a href="#" class="hover:text-[#515151] transition">Quienes Somos</a>
+      </li>
+      <li>
+        <a href="#" class="hover:text-[#515151] transition">Misión</a>
+      </li>
+      <li><a href="#" class="hover:text-[#515151] transition">Visión</a></li>
+      <li><a href="#" class="hover:text-[#515151] transition">Valores</a></li>
     </ul>
 
     <!-- Services Row + Mobile Menu -->
@@ -25,28 +30,28 @@
         <!-- Card -->
         <div class="flex flex-col items-center text-center">
           <img src="/services/serv-1.png" class="w-10 h-10 mb-1" />
-          <p class="text-[11px] font-medium leading-tight">
+          <p class="text-[11px] font-medium leading-tight font-lobster">
             Medios<br />Visuales
           </p>
         </div>
 
         <div class="flex flex-col items-center text-center">
           <img src="/services/serv-2.png" class="w-10 h-10 mb-1" />
-          <p class="text-[11px] font-medium leading-tight">
+          <p class="text-[11px] font-medium leading-tight font-lobster">
             Diseño<br />3D
           </p>
         </div>
 
         <div class="flex flex-col items-center text-center">
           <img src="/services/serv-3.png" class="w-10 h-10 mb-1" />
-          <p class="text-[11px] font-medium leading-tight">
+          <p class="text-[11px] font-medium leading-tight font-lobster">
             Web &<br />Programación
           </p>
         </div>
 
         <div class="flex flex-col items-center text-center">
           <img src="/services/serv-4.png" class="w-10 h-10 mb-1" />
-          <p class="text-[11px] font-medium leading-tight">
+          <p class="text-[11px] font-medium leading-tight font-lobster">
             Muebles<br />Comerciales
           </p>
         </div>
