--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -29,7 +29,7 @@ import HeroSlider from "../components/HeroSlider.astro";
             <input
               type="text"
               placeholder="Buscar servicios, productos, proyectos..."
-              class="flex-1 outline-none text-sm"
+              class="flex-1 outline-none text-sm font-lobster"
             />
             <svg
               width="20"
@@ -45,7 +45,9 @@ import HeroSlider from "../components/HeroSlider.astro";
         </div>
 
         <!-- WhatsApp contact -->
-        <div class="flex flex-col items-center text-center gap-2 mt-16">
+        <div
+          class="flex flex-col items-center text-center gap-2 mt-16 font-montserrat"
+        >
           <a
             href="https://wa.me/50499999999"
             class="flex items-center gap-3 bg-green-500 text-white px-5 py-2 rounded-full hover:bg-green-600 transition"
@@ -55,14 +57,19 @@ import HeroSlider from "../components/HeroSlider.astro";
                 d="M12.04 2c-5.52 0-10 4.48-10 10 0 1.76.46 3.46 1.34 4.98L2 22l5.2-1.33A10.02 10.02 0 0012.03 22c5.52 0 10-4.48 10-10s-4.48-10-10-10zm5.8 14.49c-.24.68-1.4 1.32-1.95 1.4-.5.08-1.12.11-1.81-.11-.42-.13-.96-.31-1.65-.61-2.91-1.26-4.8-4.18-4.95-4.38-.14-.19-1.18-1.57-1.18-3 0-1.42.74-2.12 1-2.41.26-.3.57-.37.76-.37.19 0 .38.01.54.01.18 0 .41-.07.64.49.24.57.82 1.97.89 2.12.07.14.12.31.02.5-.09.19-.13.31-.26.48-.13.17-.27.38-.38.51-.13.17-.27.35-.12.67.14.32.63 1.04 1.35 1.69.93.83 1.7 1.1 2.02 1.23.32.13.51.11.7-.06.19-.17.81-.95 1.02-1.27.22-.32.45-.27.76-.16.31.11 1.97.93 2.31 1.1.34.17.56.25.64.39.09.13.09.76-.15 1.44z"
               ></path>
             </svg>
-            <span class="text-sm font-medium">+504 9999-9999</span>
+            <span class="text-sm font-medium">+505 8855 5595</span>
           </a>
         </div>
 
         <!-- Social icons -->
-        <div class="flex items-center gap-12 pt-4 mt-3">
+        <div class="flex items-center gap-12 pt-4 mt-3 font-montserrat">
           <!-- Instagram -->
-          <a href="#" class="transition hover:text-heading-1 hover:scale-105">
+          <a
+            href="#"
+            class="transition hover:text-heading-1 hover:scale-105"
+            target="_blank"
+            title="Estamos en instagram"
+          >
             <svg width="42" height="42" fill="#515151">
               <use xlink:href="./assets/sprite.svg#instagram"></use>
             </svg>
@@ -70,14 +77,24 @@ import HeroSlider from "../components/HeroSlider.astro";
           </a>
 
           <!-- Facebook -->
-          <a href="#" class="transition hover:text-heading-1 hover:scale-105">
+          <a
+            href="#"
+            class="transition hover:text-heading-1 hover:scale-105"
+            target="_blank"
+            title="Estamos en facebook"
+          >
             <svg width="42" height="42" fill="#515151">
               <use xlink:href="./assets/sprite.svg#fb"></use>
             </svg>
             <span class="sr-only">Facebook Link</span>
           </a>
           <!-- Location -->
-          <a href="#" class="transition hover:text-heading-1 hover:scale-105">
+          <a
+            href="#"
+            class="transition hover:text-heading-1 hover:scale-105"
+            target="_blank"
+            title="Nuestra ubicación"
+          >
             <svg width="42" height="42" fill="#515151">
               <use xlink:href="./assets/sprite.svg#location"></use>
             </svg>
@@ -85,7 +102,7 @@ import HeroSlider from "../components/HeroSlider.astro";
           </a>
         </div>
         <div
-          class="flex items-center gap-3 pt-4 text-[#515151] hover:text-heading-1 transition cursor-pointer"
+          class="flex items-center gap-3 pt-4 text-[#515151] hover:text-heading-1 transition cursor-pointer font-montserrat"
         >
           <a
             href="mailto:info@anicasolucionesintegrales.com"
