--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,9 +2,13 @@
 import DefaultLayout from "../layouts/DefaultLayout.astro";
 import Header from "../components/Header.astro";
 import Hero from "../components/Hero.astro";
+import Services from "../components/sections/Services.astro";
+import Institucional from "../components/sections/Institucional.astro";
 ---
 
 <DefaultLayout>
   <Header />
   <Hero />
+  <Services />
+  <Institucional />
 </DefaultLayout>
