--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,9 @@ import Header from "../components/Header.astro";
 import Hero from "../components/Hero.astro";
 import Services from "../components/sections/Services.astro";
 import Institucional from "../components/sections/Institucional.astro";
+import { getSiteInfo } from "../services/wp";
+
+console.log("informacion del sitio", await getSiteInfo());
 ---
 
 <DefaultLayout>
