--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,9 +4,10 @@ import Header from "../components/Header.astro";
 import Hero from "../components/Hero.astro";
 import Services from "../components/sections/Services.astro";
 import Institucional from "../components/sections/Institucional.astro";
-import { getSiteInfo } from "../services/wp";
+import { getPageInfo, getSiteInfo } from "../services/wp";
 
 console.log("informacion del sitio", await getSiteInfo());
+// const { title, content } = await getPageInfo("sample-page");
 ---
 
 <DefaultLayout>
