fix: local proxy

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,5 +16,5 @@ console.log("informacion del sitio", siteInfo);
   <Hero />
   <Services />
   <Institucional />
-  <span>{siteInfo?.site?.name}</span>
+  <span>Env:{siteInfo?.site?.name}</span>
 </DefaultLayout>
