--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,8 +6,8 @@ import Services from "../components/sections/Services.astro";
 import Institucional from "../components/sections/Institucional.astro";
 import { getPageInfo, getSiteInfo } from "../services/wp";
 
-const siteInfo = await getSiteInfo();
-console.log("informacion del sitio", siteInfo);
+// const siteInfo = await getSiteInfo();
+// console.log("informacion del sitio", siteInfo);
 // const { title, content } = await getPageInfo("sample-page");
 ---
 
@@ -16,5 +16,11 @@ console.log("informacion del sitio", siteInfo);
   <Hero />
   <Services />
   <Institucional />
-  <span>Env:{siteInfo?.site?.name}</span>
+  <!-- <span>{siteInfo?.site?.name}</span> -->
 </DefaultLayout>
+
+<script>
+  import { getSiteInfo } from "../services/wp";
+  const siteInfo = await getSiteInfo();
+  console.log("informacion del sitio", siteInfo);
+</script>
