fix: desactivando logs

--- a/src/components/HeroSlider.astro
+++ b/src/components/HeroSlider.astro
@@ -12,7 +12,7 @@ const slidesIMG: Slide[] = (await getSliderFromImageKit())
     a.name.localeCompare(b.name),
   );
 
-// console.log("resultado final ->  ", slidesIMG);
+console.log("resultado final ->  ", slidesIMG);
 ---
 
 <div class="carousel-3d-container">
